--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0eda21650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdc6085a390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0ec90de10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0ec90dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc60992d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc60992f90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0ed19d710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0ed19d910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc6121e690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc6121e8d0&gt;]</pre>
 </div>
 
 </div>
