--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f6e7105d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef074c8450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f6d836d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1f6d836f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fef071bfb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fef071bfd50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f6ddd0590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1f6ddd0790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fef07a36450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fef07a36650&gt;]</pre>
 </div>
 
 </div>
