--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc0a5e7b310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5eeae6190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0a5536d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0a5536f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5eee037d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb5eee03590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0a5db1710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0a5db1910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5ef054590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb5ef054790&gt;]</pre>
 </div>
 
 </div>
