--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7978e4efd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbaa6cac350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f79794ebfd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f79794eba50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbaa6995b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbaa6995d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7979721750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7979721950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbaa7219490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbaa7219690&gt;]</pre>
 </div>
 
 </div>
