--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcc020ae450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f397463a2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc01d79c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcc01d79e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3974c08b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3974c08d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc02321590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcc023217d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f39751ac4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f39751ac6d0&gt;]</pre>
 </div>
 
 </div>
