--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9962256150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f341a0be290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f996224b0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9961f23d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3419286e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3419869050&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f99624fdb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f99624c96d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3419844790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3419844990&gt;]</pre>
 </div>
 
 </div>
