--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f341a0be290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f027faa1210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3419286e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3419869050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f027f434390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f027f455cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3419844790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3419844990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f027fa44350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f027f9fd610&gt;]</pre>
 </div>
 
 </div>
