--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23c8601210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f215737cd90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23c85e1b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23c85e1d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f215655dc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f215655de90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23c8b844d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23c8b846d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2156b05550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2156b05750&gt;]</pre>
 </div>
 
 </div>
