--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f29081dbf90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa2f7db2850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2907f08c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2907f08e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2f6ef2c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2f6ef2e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f29084ba5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f29084ba810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2f7496690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2f7496890&gt;]</pre>
 </div>
 
 </div>
