--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f15a696cd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f95342e88d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f15a6dcd110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f15a6d95cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9533fb5b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9533fb5d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f15a7384950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f15a7338650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f95345a6110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f953455a610&gt;]</pre>
 </div>
 
 </div>
