--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51086ffe10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f1b784b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f510809ead0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f510809ecd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f1bd6ac10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f1bd6ae50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f510865e3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f510865e5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f1c312590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f1c3127d0&gt;]</pre>
 </div>
 
 </div>
