--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4973300f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f713eb3bc10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4973893a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4973893c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f713dc7be10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f713dc7bfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4973e69490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4973e69690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f713e2236d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f713e223890&gt;]</pre>
 </div>
 
 </div>
