--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc16fdd4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4961716510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc1696db50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc1696dd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4961396dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4961396fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc16f10450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc16f10650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49619387d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49619389d0&gt;]</pre>
 </div>
 
 </div>
