--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f525180dc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0f07bac050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f52511bfc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f52511bfe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f07563b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0f07563d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5251767590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5251767790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f07b064d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0f07b066d0&gt;]</pre>
 </div>
 
 </div>
