--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2f79ea390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f415330bbd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2f76b7a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2f76b7c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f415372fc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f415372fe50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2f7c5c390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2f7c5c590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4153cd8650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4153cd8850&gt;]</pre>
 </div>
 
 </div>
