--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f415330bbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f834bf9db10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f415372fc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f415372fe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f834b0c5b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f834b0c5d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4153cd8650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4153cd8850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f834b669490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f834b669690&gt;]</pre>
 </div>
 
 </div>
