--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f74b3d841d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa28fbf9c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f74b3a69b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f74b3a69d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa28fc4ca90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa28fc4cc90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f74b400f550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f74b400f750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa290236b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2901ef650&gt;]</pre>
 </div>
 
 </div>
