--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1857296a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40f76ab250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f185647fc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f185649ff50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40f705dc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40f705de50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1856a39550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1856a44850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40f7606510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40f7606750&gt;]</pre>
 </div>
 
 </div>
