--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40f76ab250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc0387c0650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f40f705dc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f40f705de50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0379a6ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc0379a6cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f40f7606510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f40f7606750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc037f493d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc037f495d0&gt;]</pre>
 </div>
 
 </div>
