--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc0387c0650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0da6a5350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0379a6ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0379a6cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0da36ddd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa0da36dfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc037f493d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc037f495d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0da917710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa0da917910&gt;]</pre>
 </div>
 
 </div>
