--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0da6a5350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b20bfa3d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0da36ddd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0da36dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b20f42e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b20f4df10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0da917710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0da917910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b214ea7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b214f58d0&gt;]</pre>
 </div>
 
 </div>
