--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5b1a5f950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f195366a550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5b0c44c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5b0c44e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1953334d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1953334f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5b11e9590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5b11e9790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19538da6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19538da8d0&gt;]</pre>
 </div>
 
 </div>
