--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ad2e79990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcbc4d80250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ad2080bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ad2080dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbc4706d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcbc4706f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ad2627550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ad2627750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbc4cae6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcbc4cae8d0&gt;]</pre>
 </div>
 
 </div>
