--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f062ae6fed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f720faf85d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f062a822d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f062a822f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f720f843d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f720f843f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f062adc8690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f062adc8890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f720fde8650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f720fde8850&gt;]</pre>
 </div>
 
 </div>
