--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb0b7ec80d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f5fc2aa50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0b78a6710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb0b787ad90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f60223cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f60223ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0b7e6d7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb0b7e22610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f607c7550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f607c7750&gt;]</pre>
 </div>
 
 </div>
